--- a/11 - javascript basico/aula15-functions/index.html
+++ b/11 - javascript basico/aula15-functions/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Escolha um botão</h1>
     <button onclick="escreverNoConsole('Hello World1')">Hello World</button>
     <button onclick="escreverNoConsole('Olá Mundo')">Olá Mundo</button>
     <button onclick="escreverNoConsole('Testando Funções')">Testando funções</button>
