--- a/11 - javascript basico/aula1 - tag script - outputs/index.html
+++ b/11 - javascript basico/aula1 - tag script - outputs/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
   <h1 id="titulo">Teste Novo</h1>
-
- <script src="index.js"></script>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia blanditiis, quibusdam veniam voluptas natus non, nam
+    quod eum beatae laudantium recusandae, totam architecto vel vitae consequatur fugit ad molestiae sint?</p>
+  <script src="index.js"></script>
 </body>
+
 </html>
