--- a/11 - javascript basico/aula2 document-onclick/index.html
+++ b/11 - javascript basico/aula2 document-onclick/index.html
@@ -7,13 +7,13 @@
   <title>Document</title>
 </head>
 <body>
+
+  <button onclick = "document.querySelector('#lampada').src = 'lampada_ligada.gif'">Acender</button>
+
+  <img id = "lampada" src="lampada_desligada.gif">
   
 
-  <button onclick="document.querySelector('#lampada').src='lampada_ligada.gif'">Acender</button>
+  <button onclick = "document.querySelector('#lampada').scr = 'lampada_desligada.gif'">Apagar</button>
 
-  <img id="lampada" src="lampada_desligada.gif" alt="">
-
-  <button onclick="document.querySelector('#lampada').src='lampada_desligada.gif'">Apagar</button>
-  
 </body>
 </html>
