--- a/11 - javascript basico/aula15-functions/index.html
+++ b/11 - javascript basico/aula15-functions/index.html
@@ -7,11 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Escolha um botão</h1>
-    <button onclick="escreverNoConsole('Hello World1')">Hello World</button>
-    <button onclick="escreverNoConsole('Olá Mundo')">Olá Mundo</button>
-    <button onclick="escreverNoConsole('Testando Funções')">Testando funções</button>
-
+    <button onclick="escreverNoConsole('Hello World', 'Felipe')">Hello World!</button>
+    <button onclick="escreverNoConsole('Olá Mundo!', 'Felipe')">Olá Mundo!</button>
+    <button onclick="escreverNoConsole('Testando Funções', 'Felipe')">Testando Funções</button>
     <script src="script.js"></script>
 </body>
 </html>
