--- a/11 - javascript basico/aula16-functions-return/index.html
+++ b/11 - javascript basico/aula16-functions-return/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Titulo</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestiae voluptate consequuntur assumenda ratione voluptatibus omnis rerum tempore quia mollitia, debitis officia eius neque provident repudiandae asperiores, labore, at laboriosam.</p>
+    <script src="script.js"></script>
 </body>
 </html>
